  (Vitaly Stakhovsky via rgs)

  ZOOKEEPER-2194: Let DataNode.getChildren() return an unmodifiable view of its children set
  (Hitoshi Mitake via rgs)

  ZOOKEEPER-2204: LearnerSnapshotThrottlerTest.testHighContentionWithTimeout fails occasionally
  (Donny Nadolny via rgs)

  ZOOKEEPER-2201: Network issues can cause cluster to hang due to near-deadlock
  (Donny Nadolny via rgs)

IMPROVEMENTS:
  ZOOKEEPER-1660 Documentation for Dynamic Reconfiguration (Reed Wanderman-Milne via shralex)  

  ZOOKEEPER-2017 New tests for reconfig failure cases (Alexander Shraer and
  Hongchao Deng via michim)

  ZOOKEEPER-2030 dynamicConfigFile should have an absolute path, not a relative
  path, to the dynamic configuration file (Alexander Shraer via michim)

  ZOOKEEPER-2039 Jute compareBytes incorrect comparison index (Ian Dimayuga via fpj) 

  ZOOKEEPER-1917 Apache Zookeeper logs cleartext admin passwords (fpj via michim)

  ZOOKEEPER-1948 Enable JMX remote monitoring (Biju Nair via rakeshr)

  ZOOKEEPER-2054 test-patch.sh: don't set ulimit -n (michim via rakeshr)
  
  ZOOKEEPER-2066 Updates to README.txt. (Wendy Smoak via camille)

  ZOOKEEPER-2079 Stop daemon with "kill" rather than "kill -9" (Guillaume ALAUX
  via michim)

  ZOOKEEPER-1963 Make JDK 7 the minimum requirement for Zookeeper 
  (Hongchao via fpj)

  ZOOKEEPER-2110 Typo fixes in the ZK documentation. (Jeffrey Schroeder via rakeshr)

  ZOOKEEPER-1907 Improve Thread handling (Rakesh R via michim)

  ZOOKEEPER-2107 zookeeper client should support custom HostProviders 
  (Robert Kamphuis via rakeshr)

  ZOOKEEPER-2149 Logging of client address when socket connection established
  (Hongchao Deng via michim)

  ZOOKEEPER-2176 Unclear error message should be info not error
  (rgs via hdeng)

  ZOOKEEPER-2153 X509 Authentication Documentation
  (Ian Dimayuga via hdeng)

  ZOOKEEPER-2171 avoid reverse lookups in QuorumCnxManager (rgs via michim)
